Fix : cors 설정 변경 및 코드 정리 (설정변경: SecurityConfig / 코드 정리 : JwtAuthenticationFilter , LoginResponseDto , UserEntity , UserService / 파일삭제 : AuthFilter.java)